@@ -1,5 +1,6 @@
 Version 4.1.10
 - Added APPEND mode for open
+- Allow @"stuff" notation in Spin in place of STRING("stuff")
 - Implemented ONES, QEXP, and QLOG Spin2 operators
 - Fixed a problem with negative numbers in Spin CASE statements
 
